--- a/app/src/main/res/layout/activity_match_record.xml
+++ b/app/src/main/res/layout/activity_match_record.xml
@@ -27,7 +27,8 @@
         android:id="@+id/matchRecordRecyclerView"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="20dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
 
 
 </RelativeLayout>
