--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -57,7 +57,8 @@
             android:layout_width="150dp"
             android:layout_weight="1"
             android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:onClick="playerRecordOnClick"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
