--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -29,6 +29,7 @@
         android:background="@drawable/border"
         android:textColor="#ffffff"
         android:id="@+id/playGameButton"
+        android:onClick="startGame"
         />
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
@@ -73,6 +74,7 @@
         android:textColor="#ffffff"
         android:id="@+id/newPlayerButton"
         android:layout_below="@id/linearLayout"
+        android:onClick="newPlayerAdd"
 
         />
 
