--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    
+    
 
 
         <ImageView
@@ -17,6 +19,54 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="fitXY" />
+        
+        <RelativeLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints"
+            android:id="@+id/plselrel">
+            <Button
+                android:id="@+id/whitePlayerSel"
+                android:layout_width="match_parent"
+                android:layout_marginRight="40dp"
+                android:layout_height="46dp"
+                android:layout_marginTop="20dp"
+                android:text="Select White"
+                android:background="@drawable/border2"
+                android:layout_centerHorizontal="true"
+                android:onClick="whitePlayerSelOnClick"/>
+
+
+            <Button
+                android:id="@+id/blackPlayerSel"
+                android:layout_width="match_parent"
+                android:layout_marginRight="40dp"
+                android:layout_height="46dp"
+                android:layout_marginTop="20dp"
+                android:text="Select Black"
+                android:background="@drawable/border2"
+                android:layout_below="@+id/whitePlayerSel"
+                android:layout_centerHorizontal="true"
+                android:onClick="blackPlayerSelOnClick"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/blackPlayerSel"
+                android:id="@+id/whiteselRV"
+                android:layout_marginTop="20dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/blackPlayerSel"
+                android:id="@+id/blacselRV"
+                android:layout_marginTop="20dp"/>
+        </RelativeLayout>
+    
+    
 
         <GridLayout
             android:layout_width="450dp"
@@ -24,10 +74,13 @@
             android:rowCount="8"
             android:columnCount="8"
             android:id="@+id/gridLayout2"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_margin="40dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="MissingConstraints">
+            //app:layout_constraintRight_toRightOf="parent"
+            //app:layout_constraintLeft_toLeftOf="parent"
+
 
             <TextView
                 android:background="@color/colorBoardDark"
@@ -418,11 +471,14 @@
             android:layout_height="450dp"
             android:rowCount="8"
             android:columnCount="8"
+            android:layout_margin="40dp"
             android:id="@+id/gridLayout"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="MissingConstraints">
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+
 
             <TextView
                 android:id="@+id/R00"
