--- a/app/src/main/res/layout/matchrecordlistview.xml
+++ b/app/src/main/res/layout/matchrecordlistview.xml
@@ -7,39 +7,44 @@
     <TextView
         android:id="@+id/matchNum"
         android:layout_width="30dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:textSize="20sp"
         android:layout_weight="1"
         android:layout_centerVertical="true"
-        android:background="@drawable/border2"/>
+        android:background="@drawable/border2"
+        android:textAlignment="center"
+        android:textColor="#000000"/>
     <TextView
         android:id="@+id/player1"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:textSize="20sp"
         android:layout_toRightOf="@id/matchNum"
         android:background="@drawable/border2"
         android:layout_centerVertical="true"
         android:layout_weight="1"
+        android:textColor="#000000"
         />
     <TextView
         android:id="@+id/player2"
         android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:textSize="20sp"
         android:layout_toRightOf="@id/player1"
         android:background="@drawable/border2"
         android:layout_centerVertical="true"
         android:layout_weight="1"
+        android:textColor="#000000"
         />
     <TextView
         android:id="@+id/Result"
         android:layout_width="30dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:textSize="20sp"
         android:layout_weight="1"
         android:layout_centerVertical="true"
-        android:background="@drawable/border2"/>
+        android:background="@drawable/border2"
+        android:textColor="#000000"/>
 
 
 </LinearLayout>
