--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,14 +3,23 @@
     <style name="Theme.DataChess" parent="Theme.AppCompat.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-<!--        <item name="colorPrimaryVariant">@color/colorPrimary</item>-->
-<!--        <item name="colorOnPrimary">@color/colorAccent</item>-->
-<!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
-<!--        <item name="colorSecondary">@color/colorAccent</item>-->
-<!--        <item name="colorSecondaryVariant">@color/colorAccent</item>-->
-<!--        <item name="colorOnSecondary">@color/colorAccent</item>-->
-<!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
-<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
-<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--        <item name="colorPrimaryVariant">@color/colorPrimary</item>-->
+        <!--        <item name="colorOnPrimary">@color/colorAccent</item>-->
+        <!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
+        <!--        <item name="colorSecondary">@color/colorAccent</item>-->
+        <!--        <item name="colorSecondaryVariant">@color/colorAccent</item>-->
+        <!--        <item name="colorOnSecondary">@color/colorAccent</item>-->
+        <!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
+        <!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
+        <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
     </style>
+
+    <style name="Theme.DataChess.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.DataChess.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.DataChess.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
